OSCAREMR-6232-jpa-model-to-fhir-dstu-3-r - cleaned up formatting of DHIR and BIS messages.